--- a/2022/chess-am/poster/borb-poster/pyproject.toml
+++ b/2022/chess-am/poster/borb-poster/pyproject.toml
@@ -8,7 +8,8 @@ authors = ["engeir <eirroleng@gmail.com>"]
 make-poster = "borb_poster.__main__:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8,<3.11"
+volcano-cooking = {git = "https://github.com/engeir/volcano-cooking.git", rev = "main"}
 borb = {path = "../../../../../../projects/borb", develop = true}
 
 [tool.poetry.dev-dependencies]
