--- a/2022/chess-am/poster/borb-poster/pyproject.toml
+++ b/2022/chess-am/poster/borb-poster/pyproject.toml
@@ -14,6 +14,7 @@ borb = {path = "../../../../../../projects/borb", develop = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
