--- a/2022/chess-am/poster/borb-poster/pyproject.toml
+++ b/2022/chess-am/poster/borb-poster/pyproject.toml
@@ -11,6 +11,7 @@ make-poster = "borb_poster.__main__:main"
 python = ">=3.8,<3.11"
 volcano-cooking = {git = "https://github.com/engeir/volcano-cooking.git", rev = "main"}
 borb = {path = "../../../../../../projects/borb", develop = true}
+diagrams = "^0.21.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
