--- a/2022/chess-am/poster/borb-poster/pyproject.toml
+++ b/2022/chess-am/poster/borb-poster/pyproject.toml
@@ -16,6 +16,7 @@ diagrams = "^0.21.1"
 pytest = "^5.2"
 black = "^22.3.0"
 rich = "^12.3.0"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
